--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: airapps-fixes
 Section: x11
 Priority: optional
 Maintainer: LliureX Team <lliurex@gva.es>
-Build-Depends: cdbs, debhelper (>= 7)
+Build-Depends: debhelper (>= 7)
 Standards-Version: 3.8.4
 
 Package: airapps-fixes
