--- a/debian/control
+++ b/debian/control
@@ -8,9 +8,9 @@ Standards-Version: 3.8.4
 Package: airapps-fixes
 Architecture: all
 Section: x11
-Replaces: zero-lliurex-scratch2(<<0.2.5)
-Conflicts: zero-lliurex-scratch2(<<0.2.5), zero-lliurex-scratch
-Breaks: zero-lliurex-scratch2(<<0.2.5)
+Replaces: zero-lliurex-scratch (<<0.4)
+Conflicts: zero-lliurex-scratch2(<<0.4), zero-lliurex-scratch(<<0.4)
+Breaks: zero-lliurex-scratch
 Description: Fixes for air applications
  This package constains fixes for issues with some air apps
  
