--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Architecture: all
 Section: x11
 Replaces: zero-lliurex-scratch (<<0.4)
 Conflicts: zero-lliurex-scratch2(<<0.4), zero-lliurex-scratch(<<0.4)
-Breaks: zero-lliurex-scratch
+Breaks: zero-lliurex-scratch(<<0.4)
 Description: Fixes for air applications
  This package constains fixes for issues with some air apps
  
